4-Lex-Yacc/LanguageSpecific/PostCompilation/lang.output
Terminals unused in grammar

    DOT
    LBRACKET
    RBRACKET
    BLOCK
    AND
    OR
    IF_NO_ELSE


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement_list statement
    3               | statement

    4 statement: assignment SEMICOLON
    5          | io_statement SEMICOLON
    6          | compound_statement
    7          | if_statement
    8          | while_statement
    9          | for_statement
   10          | function_declaration
   11          | return_statement SEMICOLON

   12 assignment: IDENTIFIER ASSIGN expression

   13 io_statement: PRINT LPAREN expression RPAREN
   14             | IDENTIFIER ASSIGN READ LPAREN RPAREN

   15 compound_statement: LACCOLADE statement_list RACCOLADE

   16 if_statement: IF LPAREN condition RPAREN COLON statement
   17             | if_statement_with_else

   18 if_statement_with_else: IF LPAREN condition RPAREN statement ELSE statement

   19 while_statement: WHILE LPAREN condition RPAREN statement

   20 for_statement: FOR LPAREN declaration COMMA constant COMMA condition COMMA assignment RPAREN statement

   21 function_declaration: return_type IDENTIFIER LPAREN parameter_list RPAREN compound_statement

   22 return_statement: RETURN expression

   23 parameter_list: ε
   24               | type IDENTIFIER
   25               | parameter_list COMMA type IDENTIFIER

   26 declaration: type IDENTIFIER

   27 condition: expression relational_operator expression
   28          | NOT condition

   29 expression: term
   30           | expression PLUS term
   31           | expression MINUS term
   32           | expression MOD term

   33 term: factor
   34     | term MULTIPLY factor
   35     | term DIVIDE factor

   36 factor: IDENTIFIER
   37       | constant
   38       | LPAREN expression RPAREN

   39 constant: INTEGER_CONST
   40         | STRING_CONST
   41         | CHAR_CONST

   42 relational_operator: LT
   43                    | LE
   44                    | GT
   45                    | GE
   46                    | EQ
   47                    | NE

   48 return_type: INT
   49            | CHAR
   50            | STRING
   51            | VOID

   52 type: INT
   53     | CHAR
   54     | STRING


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PLUS (258) 30
    MINUS (259) 31
    MULTIPLY (260) 34
    DIVIDE (261) 35
    LT (262) 42
    LE (263) 43
    GT (264) 44
    GE (265) 45
    EQ (266) 46
    NE (267) 47
    ASSIGN (268) 12 14
    MOD (269) 32
    COMMA (270) 20 25
    DOT (271)
    LPAREN (272) 13 14 16 18 19 20 21 38
    RPAREN (273) 13 14 16 18 19 20 21 38
    LBRACKET (274)
    RBRACKET (275)
    LACCOLADE (276) 15
    RACCOLADE (277) 15
    COLON (278) 16
    SEMICOLON (279) 4 5 11
    BLOCK (280)
    INT (281) 48 52
    CHAR (282) 49 53
    STRING (283) 50 54
    IF (284) 16 18
    ELSE (285) 18
    WHILE (286) 19
    FOR (287) 20
    RETURN (288) 22
    READ (289) 14
    PRINT (290) 13
    VOID (291) 51
    AND (292)
    OR (293)
    NOT (294) 28
    IDENTIFIER (295) 12 14 21 24 25 26 36
    INTEGER_CONST (296) 39
    STRING_CONST (297) 40
    CHAR_CONST (298) 41
    IF_NO_ELSE (299)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program (46)
        on left: 1
        on right: 0
    statement_list (47)
        on left: 2 3
        on right: 1 2 15
    statement (48)
        on left: 4 5 6 7 8 9 10 11
        on right: 2 3 16 18 19 20
    assignment (49)
        on left: 12
        on right: 4 20
    io_statement (50)
        on left: 13 14
        on right: 5
    compound_statement (51)
        on left: 15
        on right: 6 21
    if_statement (52)
        on left: 16 17
        on right: 7
    if_statement_with_else (53)
        on left: 18
        on right: 17
    while_statement (54)
        on left: 19
        on right: 8
    for_statement (55)
        on left: 20
        on right: 9
    function_declaration (56)
        on left: 21
        on right: 10
    return_statement (57)
        on left: 22
        on right: 11
    parameter_list (58)
        on left: 23 24 25
        on right: 21 25
    declaration (59)
        on left: 26
        on right: 20
    condition (60)
        on left: 27 28
        on right: 16 18 19 20 28
    expression (61)
        on left: 29 30 31 32
        on right: 12 13 22 27 30 31 32 38
    term (62)
        on left: 33 34 35
        on right: 29 30 31 32 34 35
    factor (63)
        on left: 36 37 38
        on right: 33 34 35
    constant (64)
        on left: 39 40 41
        on right: 20 37
    relational_operator (65)
        on left: 42 43 44 45 46 47
        on right: 27
    return_type (66)
        on left: 48 49 50 51
        on right: 21
    type (67)
        on left: 52 53 54
        on right: 24 25 26


State 0

    0 $accept: • program $end

    LACCOLADE   shift, and go to state 1
    INT         shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    RETURN      shift, and go to state 8
    PRINT       shift, and go to state 9
    VOID        shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    program                 go to state 12
    statement_list          go to state 13
    statement               go to state 14
    assignment              go to state 15
    io_statement            go to state 16
    compound_statement      go to state 17
    if_statement            go to state 18
    if_statement_with_else  go to state 19
    while_statement         go to state 20
    for_statement           go to state 21
    function_declaration    go to state 22
    return_statement        go to state 23
    return_type             go to state 24


State 1

   15 compound_statement: LACCOLADE • statement_list RACCOLADE

    LACCOLADE   shift, and go to state 1
    INT         shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    RETURN      shift, and go to state 8
    PRINT       shift, and go to state 9
    VOID        shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    statement_list          go to state 25
    statement               go to state 14
    assignment              go to state 15
    io_statement            go to state 16
    compound_statement      go to state 17
    if_statement            go to state 18
    if_statement_with_else  go to state 19
    while_statement         go to state 20
    for_statement           go to state 21
    function_declaration    go to state 22
    return_statement        go to state 23
    return_type             go to state 24


State 2

   48 return_type: INT •

    $default  reduce using rule 48 (return_type)


State 3

   49 return_type: CHAR •

    $default  reduce using rule 49 (return_type)


State 4

   50 return_type: STRING •

    $default  reduce using rule 50 (return_type)


State 5

   16 if_statement: IF • LPAREN condition RPAREN COLON statement
   18 if_statement_with_else: IF • LPAREN condition RPAREN statement ELSE statement

    LPAREN  shift, and go to state 26


State 6

   19 while_statement: WHILE • LPAREN condition RPAREN statement

    LPAREN  shift, and go to state 27


State 7

   20 for_statement: FOR • LPAREN declaration COMMA constant COMMA condition COMMA assignment RPAREN statement

    LPAREN  shift, and go to state 28


State 8

   22 return_statement: RETURN • expression

    LPAREN         shift, and go to state 29
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    expression  go to state 34
    term        go to state 35
    factor      go to state 36
    constant    go to state 37


State 9

   13 io_statement: PRINT • LPAREN expression RPAREN

    LPAREN  shift, and go to state 38


State 10

   51 return_type: VOID •

    $default  reduce using rule 51 (return_type)


State 11

   12 assignment: IDENTIFIER • ASSIGN expression
   14 io_statement: IDENTIFIER • ASSIGN READ LPAREN RPAREN

    ASSIGN  shift, and go to state 39


State 12

    0 $accept: program • $end

    $end  shift, and go to state 40


State 13

    1 program: statement_list •
    2 statement_list: statement_list • statement

    LACCOLADE   shift, and go to state 1
    INT         shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    RETURN      shift, and go to state 8
    PRINT       shift, and go to state 9
    VOID        shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 1 (program)

    statement               go to state 41
    assignment              go to state 15
    io_statement            go to state 16
    compound_statement      go to state 17
    if_statement            go to state 18
    if_statement_with_else  go to state 19
    while_statement         go to state 20
    for_statement           go to state 21
    function_declaration    go to state 22
    return_statement        go to state 23
    return_type             go to state 24


State 14

    3 statement_list: statement •

    $default  reduce using rule 3 (statement_list)


State 15

    4 statement: assignment • SEMICOLON

    SEMICOLON  shift, and go to state 42


State 16

    5 statement: io_statement • SEMICOLON

    SEMICOLON  shift, and go to state 43


State 17

    6 statement: compound_statement •

    $default  reduce using rule 6 (statement)


State 18

    7 statement: if_statement •

    $default  reduce using rule 7 (statement)


State 19

   17 if_statement: if_statement_with_else •

    $default  reduce using rule 17 (if_statement)


State 20

    8 statement: while_statement •

    $default  reduce using rule 8 (statement)


State 21

    9 statement: for_statement •

    $default  reduce using rule 9 (statement)


State 22

   10 statement: function_declaration •

    $default  reduce using rule 10 (statement)


State 23

   11 statement: return_statement • SEMICOLON

    SEMICOLON  shift, and go to state 44


State 24

   21 function_declaration: return_type • IDENTIFIER LPAREN parameter_list RPAREN compound_statement

    IDENTIFIER  shift, and go to state 45


State 25

    2 statement_list: statement_list • statement
   15 compound_statement: LACCOLADE statement_list • RACCOLADE

    LACCOLADE   shift, and go to state 1
    RACCOLADE   shift, and go to state 46
    INT         shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    RETURN      shift, and go to state 8
    PRINT       shift, and go to state 9
    VOID        shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    statement               go to state 41
    assignment              go to state 15
    io_statement            go to state 16
    compound_statement      go to state 17
    if_statement            go to state 18
    if_statement_with_else  go to state 19
    while_statement         go to state 20
    for_statement           go to state 21
    function_declaration    go to state 22
    return_statement        go to state 23
    return_type             go to state 24


State 26

   16 if_statement: IF LPAREN • condition RPAREN COLON statement
   18 if_statement_with_else: IF LPAREN • condition RPAREN statement ELSE statement

    LPAREN         shift, and go to state 29
    NOT            shift, and go to state 47
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    condition   go to state 48
    expression  go to state 49
    term        go to state 35
    factor      go to state 36
    constant    go to state 37


State 27

   19 while_statement: WHILE LPAREN • condition RPAREN statement

    LPAREN         shift, and go to state 29
    NOT            shift, and go to state 47
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    condition   go to state 50
    expression  go to state 49
    term        go to state 35
    factor      go to state 36
    constant    go to state 37


State 28

   20 for_statement: FOR LPAREN • declaration COMMA constant COMMA condition COMMA assignment RPAREN statement

    INT     shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53

    declaration  go to state 54
    type         go to state 55


State 29

   38 factor: LPAREN • expression RPAREN

    LPAREN         shift, and go to state 29
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    expression  go to state 56
    term        go to state 35
    factor      go to state 36
    constant    go to state 37


State 30

   36 factor: IDENTIFIER •

    $default  reduce using rule 36 (factor)


State 31

   39 constant: INTEGER_CONST •

    $default  reduce using rule 39 (constant)


State 32

   40 constant: STRING_CONST •

    $default  reduce using rule 40 (constant)


State 33

   41 constant: CHAR_CONST •

    $default  reduce using rule 41 (constant)


State 34

   22 return_statement: RETURN expression •
   30 expression: expression • PLUS term
   31           | expression • MINUS term
   32           | expression • MOD term

    PLUS   shift, and go to state 57
    MINUS  shift, and go to state 58
    MOD    shift, and go to state 59

    $default  reduce using rule 22 (return_statement)


State 35

   29 expression: term •
   34 term: term • MULTIPLY factor
   35     | term • DIVIDE factor

    MULTIPLY  shift, and go to state 60
    DIVIDE    shift, and go to state 61

    $default  reduce using rule 29 (expression)


State 36

   33 term: factor •

    $default  reduce using rule 33 (term)


State 37

   37 factor: constant •

    $default  reduce using rule 37 (factor)


State 38

   13 io_statement: PRINT LPAREN • expression RPAREN

    LPAREN         shift, and go to state 29
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    expression  go to state 62
    term        go to state 35
    factor      go to state 36
    constant    go to state 37


State 39

   12 assignment: IDENTIFIER ASSIGN • expression
   14 io_statement: IDENTIFIER ASSIGN • READ LPAREN RPAREN

    LPAREN         shift, and go to state 29
    READ           shift, and go to state 63
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    expression  go to state 64
    term        go to state 35
    factor      go to state 36
    constant    go to state 37


State 40

    0 $accept: program $end •

    $default  accept


State 41

    2 statement_list: statement_list statement •

    $default  reduce using rule 2 (statement_list)


State 42

    4 statement: assignment SEMICOLON •

    $default  reduce using rule 4 (statement)


State 43

    5 statement: io_statement SEMICOLON •

    $default  reduce using rule 5 (statement)


State 44

   11 statement: return_statement SEMICOLON •

    $default  reduce using rule 11 (statement)


State 45

   21 function_declaration: return_type IDENTIFIER • LPAREN parameter_list RPAREN compound_statement

    LPAREN  shift, and go to state 65


State 46

   15 compound_statement: LACCOLADE statement_list RACCOLADE •

    $default  reduce using rule 15 (compound_statement)


State 47

   28 condition: NOT • condition

    LPAREN         shift, and go to state 29
    NOT            shift, and go to state 47
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    condition   go to state 66
    expression  go to state 49
    term        go to state 35
    factor      go to state 36
    constant    go to state 37


State 48

   16 if_statement: IF LPAREN condition • RPAREN COLON statement
   18 if_statement_with_else: IF LPAREN condition • RPAREN statement ELSE statement

    RPAREN  shift, and go to state 67


State 49

   27 condition: expression • relational_operator expression
   30 expression: expression • PLUS term
   31           | expression • MINUS term
   32           | expression • MOD term

    PLUS   shift, and go to state 57
    MINUS  shift, and go to state 58
    LT     shift, and go to state 68
    LE     shift, and go to state 69
    GT     shift, and go to state 70
    GE     shift, and go to state 71
    EQ     shift, and go to state 72
    NE     shift, and go to state 73
    MOD    shift, and go to state 59

    relational_operator  go to state 74


State 50

   19 while_statement: WHILE LPAREN condition • RPAREN statement

    RPAREN  shift, and go to state 75


State 51

   52 type: INT •

    $default  reduce using rule 52 (type)


State 52

   53 type: CHAR •

    $default  reduce using rule 53 (type)


State 53

   54 type: STRING •

    $default  reduce using rule 54 (type)


State 54

   20 for_statement: FOR LPAREN declaration • COMMA constant COMMA condition COMMA assignment RPAREN statement

    COMMA  shift, and go to state 76


State 55

   26 declaration: type • IDENTIFIER

    IDENTIFIER  shift, and go to state 77


State 56

   30 expression: expression • PLUS term
   31           | expression • MINUS term
   32           | expression • MOD term
   38 factor: LPAREN expression • RPAREN

    PLUS    shift, and go to state 57
    MINUS   shift, and go to state 58
    MOD     shift, and go to state 59
    RPAREN  shift, and go to state 78


State 57

   30 expression: expression PLUS • term

    LPAREN         shift, and go to state 29
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    term      go to state 79
    factor    go to state 36
    constant  go to state 37


State 58

   31 expression: expression MINUS • term

    LPAREN         shift, and go to state 29
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    term      go to state 80
    factor    go to state 36
    constant  go to state 37


State 59

   32 expression: expression MOD • term

    LPAREN         shift, and go to state 29
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    term      go to state 81
    factor    go to state 36
    constant  go to state 37


State 60

   34 term: term MULTIPLY • factor

    LPAREN         shift, and go to state 29
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    factor    go to state 82
    constant  go to state 37


State 61

   35 term: term DIVIDE • factor

    LPAREN         shift, and go to state 29
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    factor    go to state 83
    constant  go to state 37


State 62

   13 io_statement: PRINT LPAREN expression • RPAREN
   30 expression: expression • PLUS term
   31           | expression • MINUS term
   32           | expression • MOD term

    PLUS    shift, and go to state 57
    MINUS   shift, and go to state 58
    MOD     shift, and go to state 59
    RPAREN  shift, and go to state 84


State 63

   14 io_statement: IDENTIFIER ASSIGN READ • LPAREN RPAREN

    LPAREN  shift, and go to state 85


State 64

   12 assignment: IDENTIFIER ASSIGN expression •
   30 expression: expression • PLUS term
   31           | expression • MINUS term
   32           | expression • MOD term

    PLUS   shift, and go to state 57
    MINUS  shift, and go to state 58
    MOD    shift, and go to state 59

    $default  reduce using rule 12 (assignment)


State 65

   21 function_declaration: return_type IDENTIFIER LPAREN • parameter_list RPAREN compound_statement

    INT     shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53

    $default  reduce using rule 23 (parameter_list)

    parameter_list  go to state 86
    type            go to state 87


State 66

   28 condition: NOT condition •

    $default  reduce using rule 28 (condition)


State 67

   16 if_statement: IF LPAREN condition RPAREN • COLON statement
   18 if_statement_with_else: IF LPAREN condition RPAREN • statement ELSE statement

    LACCOLADE   shift, and go to state 1
    COLON       shift, and go to state 88
    INT         shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    RETURN      shift, and go to state 8
    PRINT       shift, and go to state 9
    VOID        shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    statement               go to state 89
    assignment              go to state 15
    io_statement            go to state 16
    compound_statement      go to state 17
    if_statement            go to state 18
    if_statement_with_else  go to state 19
    while_statement         go to state 20
    for_statement           go to state 21
    function_declaration    go to state 22
    return_statement        go to state 23
    return_type             go to state 24


State 68

   42 relational_operator: LT •

    $default  reduce using rule 42 (relational_operator)


State 69

   43 relational_operator: LE •

    $default  reduce using rule 43 (relational_operator)


State 70

   44 relational_operator: GT •

    $default  reduce using rule 44 (relational_operator)


State 71

   45 relational_operator: GE •

    $default  reduce using rule 45 (relational_operator)


State 72

   46 relational_operator: EQ •

    $default  reduce using rule 46 (relational_operator)


State 73

   47 relational_operator: NE •

    $default  reduce using rule 47 (relational_operator)


State 74

   27 condition: expression relational_operator • expression

    LPAREN         shift, and go to state 29
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    expression  go to state 90
    term        go to state 35
    factor      go to state 36
    constant    go to state 37


State 75

   19 while_statement: WHILE LPAREN condition RPAREN • statement

    LACCOLADE   shift, and go to state 1
    INT         shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    RETURN      shift, and go to state 8
    PRINT       shift, and go to state 9
    VOID        shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    statement               go to state 91
    assignment              go to state 15
    io_statement            go to state 16
    compound_statement      go to state 17
    if_statement            go to state 18
    if_statement_with_else  go to state 19
    while_statement         go to state 20
    for_statement           go to state 21
    function_declaration    go to state 22
    return_statement        go to state 23
    return_type             go to state 24


State 76

   20 for_statement: FOR LPAREN declaration COMMA • constant COMMA condition COMMA assignment RPAREN statement

    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    constant  go to state 92


State 77

   26 declaration: type IDENTIFIER •

    $default  reduce using rule 26 (declaration)


State 78

   38 factor: LPAREN expression RPAREN •

    $default  reduce using rule 38 (factor)


State 79

   30 expression: expression PLUS term •
   34 term: term • MULTIPLY factor
   35     | term • DIVIDE factor

    MULTIPLY  shift, and go to state 60
    DIVIDE    shift, and go to state 61

    $default  reduce using rule 30 (expression)


State 80

   31 expression: expression MINUS term •
   34 term: term • MULTIPLY factor
   35     | term • DIVIDE factor

    MULTIPLY  shift, and go to state 60
    DIVIDE    shift, and go to state 61

    $default  reduce using rule 31 (expression)


State 81

   32 expression: expression MOD term •
   34 term: term • MULTIPLY factor
   35     | term • DIVIDE factor

    MULTIPLY  shift, and go to state 60
    DIVIDE    shift, and go to state 61

    $default  reduce using rule 32 (expression)


State 82

   34 term: term MULTIPLY factor •

    $default  reduce using rule 34 (term)


State 83

   35 term: term DIVIDE factor •

    $default  reduce using rule 35 (term)


State 84

   13 io_statement: PRINT LPAREN expression RPAREN •

    $default  reduce using rule 13 (io_statement)


State 85

   14 io_statement: IDENTIFIER ASSIGN READ LPAREN • RPAREN

    RPAREN  shift, and go to state 93


State 86

   21 function_declaration: return_type IDENTIFIER LPAREN parameter_list • RPAREN compound_statement
   25 parameter_list: parameter_list • COMMA type IDENTIFIER

    COMMA   shift, and go to state 94
    RPAREN  shift, and go to state 95


State 87

   24 parameter_list: type • IDENTIFIER

    IDENTIFIER  shift, and go to state 96


State 88

   16 if_statement: IF LPAREN condition RPAREN COLON • statement

    LACCOLADE   shift, and go to state 1
    INT         shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    RETURN      shift, and go to state 8
    PRINT       shift, and go to state 9
    VOID        shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    statement               go to state 97
    assignment              go to state 15
    io_statement            go to state 16
    compound_statement      go to state 17
    if_statement            go to state 18
    if_statement_with_else  go to state 19
    while_statement         go to state 20
    for_statement           go to state 21
    function_declaration    go to state 22
    return_statement        go to state 23
    return_type             go to state 24


State 89

   18 if_statement_with_else: IF LPAREN condition RPAREN statement • ELSE statement

    ELSE  shift, and go to state 98


State 90

   27 condition: expression relational_operator expression •
   30 expression: expression • PLUS term
   31           | expression • MINUS term
   32           | expression • MOD term

    PLUS   shift, and go to state 57
    MINUS  shift, and go to state 58
    MOD    shift, and go to state 59

    $default  reduce using rule 27 (condition)


State 91

   19 while_statement: WHILE LPAREN condition RPAREN statement •

    $default  reduce using rule 19 (while_statement)


State 92

   20 for_statement: FOR LPAREN declaration COMMA constant • COMMA condition COMMA assignment RPAREN statement

    COMMA  shift, and go to state 99


State 93

   14 io_statement: IDENTIFIER ASSIGN READ LPAREN RPAREN •

    $default  reduce using rule 14 (io_statement)


State 94

   25 parameter_list: parameter_list COMMA • type IDENTIFIER

    INT     shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53

    type  go to state 100


State 95

   21 function_declaration: return_type IDENTIFIER LPAREN parameter_list RPAREN • compound_statement

    LACCOLADE  shift, and go to state 1

    compound_statement  go to state 101


State 96

   24 parameter_list: type IDENTIFIER •

    $default  reduce using rule 24 (parameter_list)


State 97

   16 if_statement: IF LPAREN condition RPAREN COLON statement •

    $default  reduce using rule 16 (if_statement)


State 98

   18 if_statement_with_else: IF LPAREN condition RPAREN statement ELSE • statement

    LACCOLADE   shift, and go to state 1
    INT         shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    RETURN      shift, and go to state 8
    PRINT       shift, and go to state 9
    VOID        shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    statement               go to state 102
    assignment              go to state 15
    io_statement            go to state 16
    compound_statement      go to state 17
    if_statement            go to state 18
    if_statement_with_else  go to state 19
    while_statement         go to state 20
    for_statement           go to state 21
    function_declaration    go to state 22
    return_statement        go to state 23
    return_type             go to state 24


State 99

   20 for_statement: FOR LPAREN declaration COMMA constant COMMA • condition COMMA assignment RPAREN statement

    LPAREN         shift, and go to state 29
    NOT            shift, and go to state 47
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    condition   go to state 103
    expression  go to state 49
    term        go to state 35
    factor      go to state 36
    constant    go to state 37


State 100

   25 parameter_list: parameter_list COMMA type • IDENTIFIER

    IDENTIFIER  shift, and go to state 104


State 101

   21 function_declaration: return_type IDENTIFIER LPAREN parameter_list RPAREN compound_statement •

    $default  reduce using rule 21 (function_declaration)


State 102

   18 if_statement_with_else: IF LPAREN condition RPAREN statement ELSE statement •

    $default  reduce using rule 18 (if_statement_with_else)


State 103

   20 for_statement: FOR LPAREN declaration COMMA constant COMMA condition • COMMA assignment RPAREN statement

    COMMA  shift, and go to state 105


State 104

   25 parameter_list: parameter_list COMMA type IDENTIFIER •

    $default  reduce using rule 25 (parameter_list)


State 105

   20 for_statement: FOR LPAREN declaration COMMA constant COMMA condition COMMA • assignment RPAREN statement

    IDENTIFIER  shift, and go to state 106

    assignment  go to state 107


State 106

   12 assignment: IDENTIFIER • ASSIGN expression

    ASSIGN  shift, and go to state 108


State 107

   20 for_statement: FOR LPAREN declaration COMMA constant COMMA condition COMMA assignment • RPAREN statement

    RPAREN  shift, and go to state 109


State 108

   12 assignment: IDENTIFIER ASSIGN • expression

    LPAREN         shift, and go to state 29
    IDENTIFIER     shift, and go to state 30
    INTEGER_CONST  shift, and go to state 31
    STRING_CONST   shift, and go to state 32
    CHAR_CONST     shift, and go to state 33

    expression  go to state 64
    term        go to state 35
    factor      go to state 36
    constant    go to state 37


State 109

   20 for_statement: FOR LPAREN declaration COMMA constant COMMA condition COMMA assignment RPAREN • statement

    LACCOLADE   shift, and go to state 1
    INT         shift, and go to state 2
    CHAR        shift, and go to state 3
    STRING      shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FOR         shift, and go to state 7
    RETURN      shift, and go to state 8
    PRINT       shift, and go to state 9
    VOID        shift, and go to state 10
    IDENTIFIER  shift, and go to state 11

    statement               go to state 110
    assignment              go to state 15
    io_statement            go to state 16
    compound_statement      go to state 17
    if_statement            go to state 18
    if_statement_with_else  go to state 19
    while_statement         go to state 20
    for_statement           go to state 21
    function_declaration    go to state 22
    return_statement        go to state 23
    return_type             go to state 24


State 110

   20 for_statement: FOR LPAREN declaration COMMA constant COMMA condition COMMA assignment RPAREN statement •

    $default  reduce using rule 20 (for_statement)
